ALLOWED_CANCELLATION_REQUESTED is not waiting